--- a/SEMANA_07/EXERCICIOS/Jogo da velha - node js/fron/index.html
+++ b/SEMANA_07/EXERCICIOS/Jogo da velha - node js/fron/index.html
@@ -14,13 +14,13 @@
 
 <body>
 	<div id="main">
-		<h1>TIC TAC TOE</h1>
+		<h1>Jogo da Velha</h1>
 
 		<!-- Game Instructions -->
-		<p id="ins">Game starts by just Tap on
-			box<br><br>First Player starts as
-			<b>Player X</b><br>And<br>Second
-			Player as <b>Player 0</b>
+		<p id="ins">Il gioco inizia semplicemente toccando la scatola
+			<br><br>Il primo giocatore inizia come
+			<b>giocatore X</b><br>And<br>Secondo
+			giocatore come<b>giocatore 0</b>
 		</p>
 
 
